<resources>
    <string name="app_name">Notes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="todo_tab_title">Todo</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="import_">Import</string>

    <string name="todo_text_label">Do what?</string>
    <string name="todo_period_label">Repeat every</string>

    <string name="purchase_tab_title">Purchases</string>
    <string name="purchase_title_label">Title</string>
    <string name="purchase_details_label">Details</string>
    <string name="purchase_import_label">Import from text</string>
</resources>
