<?xml version="1.0" encoding="utf-8"?><!--LinearLayout-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/purchase_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/purchase_buttons"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:id="@+id/purchase_buttons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/add_purchase"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/add"
            android:text="@string/add"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/delete_purchase"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/delete"
            android:text="@string/delete"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/clear_all_purchases"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/clear"
            android:text="@string/clear"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/import_purchases"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/import_"
            android:text="@string/import_"
            android:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>
