<?xml version="1.0" encoding="utf-8"?><!--LinearLayout-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/todo_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/todo_buttons"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:id="@+id/todo_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/add_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/add"
            android:text="@string/add"
            android:textAllCaps="false" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/done_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/done"
            android:text="@string/done"
            android:textAllCaps="false" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/delete_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/delete"
            android:text="@string/delete"
            android:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>
